gh-pages: Added new auto update xml url on github to manifest.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,5 +16,6 @@
     "webview",
     "https://*.beatsmusic.com/*",
     "http://*.beatsmusic.com/*"
-  ]
+  ],
+  "update_url": "http://mikeflynn.github.io/beats-app/app/auto-update.xml",
 }
