--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "Beats Music",
+  "name": "Beats Music Chrome App",
+  "short_name": "Beats Music",
   "description": "Beats Music Google Chrome Web App",
-  "version": "1.2",
+  "version": "1.3",
   "manifest_version": 2,
   "app": {
     "background": {
@@ -16,6 +17,5 @@
     "webview",
     "https://*.beatsmusic.com/*",
     "http://*.beatsmusic.com/*"
-  ],
-  "update_url": "http://mikeflynn.github.io/beats-app/auto-update.xml"
+  ]
 }
