update_url: Added update_url pointing to GitHub.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,5 +17,6 @@
     "webview",
     "https://*.beatsmusic.com/*",
     "http://*.beatsmusic.com/*"
-  ]
+  ],
+  "update_url": "http://mikeflynn.github.io/beats-app/auto-update.xml"
 }
